Continue German translation

--- a/de/coins.html
+++ b/de/coins.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart-Contract</a>
                             </li>
                             <li><a href="coins.html">My Coins</a>
 							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
@@ -287,32 +287,30 @@
 	<p></p><li>To cash out your coins, click the "Withdraw" button and follow the prompts.</li><p></p>
 	<p></p><li><b>PLEASE SAVE THIS SOMEWHERE SAFE:</b> If for any reason this website goes down, you can open up a Transaction through Metamask, Send 0 Ether with a 150k Gas Limit to the Contract at "0x2fa0ac498d01632f959d3c18e38f4390b005e200" and send "0xb1e35242" under additional data for a personal exit scheme. This is the getMeOutOfHere() function on the contract and will cash you out of all tokens and dividends. </li><p></p>
 </div>
-							<div class="container">	
-                            <div class="sections">
-                                <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
-                             </div>
-                             <div class="sections">
-                                <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
-                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in EthPryamid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
-                             </div>
-                             <div class="sections">
-                                <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
-                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
-
-                                </p>                                    </div>
-                             <div class="sections">
-                                 <h4 id="4">Q: Is EthPyramid secure?</h4>
-                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
-                              </div>
-                             <div class="sections">
-                                <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
-                                <p>A: You need to install <a href="https://metamask.io/">Metamask</a> and also need to buy some Ether (ETH), probably from something like Coinbase.</p>
-                             </div>
-                             <div class="sections">
-                                <h4 id="6">Q: Is this coin pre-mined?</h4>
-                                <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
-                             </div>
+							<div class="container">
+                                <div class="sections">
+                                    <h4 id="1">Q: Ist das eine legitime Crypto- Münze?</h4>
+                                    <p>A: Ja, EthPyramid (EPY) ist legitimer ERC20 Standard Token basierend auf dem Ethereum Netzwerk.Er hat keinen wert ausserhalb von Ethpyramid und kann nur dort gehandelt werden und sollte auf keinen fall als richtige Investition gesehen werden.</p>
+                                </div>
+                                <div class="sections">
+                                    <h4 id="2">Q: Habt ihr euch den Code von PoWH geklaut?</h4>
+                                    <p>A: Nein, der EthPyramid Code wurde von Grund auf neu geschrieben und alle Hintertüren der vorherigen Pyramidensysteme sind in EthPyramid nicht vorhanden.</p>
+                                </div>
+                                <div class="sections">
+                                    <h4 id="3">Q: Moment, gabs das nicht schonmal?</h4>
+                                    <p>A: Ja, es gab verschieden Varianten des Pyramidensystem, EthPyramid ist der nächste schritt Vorwärts. 10% der Investitionen gehen an alle Münzenhalter als Dividenden die wieder investiert oder ausgezahlt werden können.</p>
+                                    <div class="sections">
+                                        <h4 id="4">Q: Ist Ethpyramid sicher?</h4>
+                                        <p>Ja, unser Entwicklungsteam hat zahllose Stunden damit verbracht den Smart-Contract zu testen um sicherzustellen das er absolut solide und sicher läuft. Interne fFunktionen des Vertrages sind für niemanden verfügbar.<p>
+                                    </div>
+                                    <div class="sections">
+                                        <h4 id="5">Q: Alles klar, wie kann ich teilnehmen?</h4>
+                                        <p>A: Du brauchst eine Internetbrowser-Erweiterung die sich <a href="https://metamask.io/">Metamask</a> nennt und anschließend musst du ein wenig Ethereum kaufen.</p>
+                                    </div>
+                                    <div class="sections">
+                                        <h4 id="6">Q: Kann man die Münze so wie Bitcoin irgendwo abbauen?</h4>
+                                        <p>A: Nein, weder wir noch irgendjemand anderes hat die Möglichkeit zu abbauen. Dazu haben wir haben die gleichen Möglichkeiten Geld rein- oder rauszunehmen wie Du. Keine Hintertüren oder doppelte Böden. Ethpyramid ist selbsterhaltend und kann nicht von aussen verändert, beeinflusst oder geknackt werden.</p>
+                                    </div>
 							 </div>
                 <div id="root"></div>
 
