--- a/de/index.html
+++ b/de/index.html
@@ -84,7 +84,7 @@
                     <img src="../images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
-                    Ein <b>selbsterhaltendes</b>, <b>sicheres</b> und <b>lransparentes</b> Schneeballsystem.
+                    Ein <b>selbsterhaltendes</b>, <b>sicheres</b> und <b>transparentes</b> Pyramidensystem.
                 </div>
                 <div class="cta-group">
                     <a href="coins.html" class="cta" style="background: #d69361;">Münzen kaufen</a>
@@ -211,28 +211,28 @@
                             <div class="faq-main-content" style="padding-top: 0px;">
                                 <div class="container">
                                     <div class="sections">
-                                <h4 id="1">Q: Ist das eine legitime Crypto- Münze?</h4>
-                                <p>A: Ja, EthPyramid (EPY) ist legitimer ERC20 Standard Token basierend auf dem Ethereum Netzwerk.Er hat keinen wert ausserhalb von Ethpyramid und kann nur dort gehandelt werden und sollte auf keinen fall als richtige Investition gesehen werden.</p>
-                             </div>
-                             <div class="sections">
-                                <h4 id="2">Q: Habt ihr euch den Code von PoWH geklaut?</h4>
-                                <p>A: Nein, der EthPyramid Code wurde von Grund auf neu geschrieben und alle Hintertüren der vorherigen Pyramidensysteme sind in EthPyramid nicht vorhanden.</p>
-                             </div>
-                             <div class="sections">
-                                <h4 id="3">Q: Moment, gabs das nicht schonmal?</h4>
-                                 <p>A: Ja, es gab verschieden Varianten des Pyramidensystem, EthPyramid ist der nächste schritt Vorwärts. 10% der Investitionen gehen an alle münzen halter als Dividenden die wieder investiert oder ausgezahlt werden können.</p>
-                             <div class="sections">
-                                 <h4 id="4">Q: Ist Ethpyramid sicher?</h4>
-                                 <p>Ja, unser Entwicklungsteam hat zahllose Stunden damit verbracht den Smart-Contract zu testen um sicherzustellen das er absolut solide und sicher läuft. Interne fFunktionen des Vertrages sind für niemanden verfügbar.<p>
-                              </div>
-                             <div class="sections">
-                                <h4 id="5">Q: Alles klar, wie kann ich teilnehmen?</h4>
-                                <p>A: Du brauchst eine Internetbrowser-Erweiterung die sich&nbsp;<a href="https://metamask.io/">Metamask</a>&nbsp;nennt und anschließend musst du ein wenig Ethereum kaufen.</p>
-                             </div>
-                             <div class="sections">
-                                <h4 id="6">Q: Kann man die Münze so wie Bitcoin irgendwo abbauen?</h4>
-                                <p>A: Nein, weder wir noch irgendjemand anderes hat die Möglichkeit zu abbauen. Dazu haben wir haben die gleichen Möglichkeiten Geld rein- oder rauszunehmen wie Du. Keine Hintertüren oder doppelte Böden. Ethpyramid ist selbsterhaltend und kann nicht von aussen verändert, beeinflusst oder geknackt werden.</p>
-                             </div>
+                                        <h4 id="1">Q: Ist das eine legitime Crypto- Münze?</h4>
+                                        <p>A: Ja, EthPyramid (EPY) ist legitimer ERC20 Standard Token basierend auf dem Ethereum Netzwerk.Er hat keinen wert ausserhalb von Ethpyramid und kann nur dort gehandelt werden und sollte auf keinen fall als richtige Investition gesehen werden.</p>
+                                     </div>
+                                     <div class="sections">
+                                        <h4 id="2">Q: Habt ihr euch den Code von PoWH geklaut?</h4>
+                                        <p>A: Nein, der EthPyramid Code wurde von Grund auf neu geschrieben und alle Hintertüren der vorherigen Pyramidensysteme sind in EthPyramid nicht vorhanden.</p>
+                                     </div>
+                                     <div class="sections">
+                                        <h4 id="3">Q: Moment, gabs das nicht schonmal?</h4>
+                                         <p>A: Ja, es gab verschieden Varianten des Pyramidensystem, EthPyramid ist der nächste schritt Vorwärts. 10% der Investitionen gehen an alle Münzenhalter als Dividenden die wieder investiert oder ausgezahlt werden können.</p>
+                                     <div class="sections">
+                                         <h4 id="4">Q: Ist Ethpyramid sicher?</h4>
+                                         <p>Ja, unser Entwicklungsteam hat zahllose Stunden damit verbracht den Smart-Contract zu testen um sicherzustellen das er absolut solide und sicher läuft. Interne fFunktionen des Vertrages sind für niemanden verfügbar.<p>
+                                      </div>
+                                     <div class="sections">
+                                        <h4 id="5">Q: Alles klar, wie kann ich teilnehmen?</h4>
+                                        <p>A: Du brauchst eine Internetbrowser-Erweiterung die sich&nbsp;<a href="https://metamask.io/">Metamask</a>&nbsp;nennt und anschließend musst du ein wenig Ethereum kaufen.</p>
+                                     </div>
+                                     <div class="sections">
+                                        <h4 id="6">Q: Kann man die Münze so wie Bitcoin irgendwo abbauen?</h4>
+                                        <p>A: Nein, weder wir noch irgendjemand anderes hat die Möglichkeit zu abbauen. Dazu haben wir haben die gleichen Möglichkeiten Geld rein- oder rauszunehmen wie Du. Keine Hintertüren oder doppelte Böden. Ethpyramid ist selbsterhaltend und kann nicht von aussen verändert, beeinflusst oder geknackt werden.</p>
+                                     </div>
                                 </div>
                             </div>
                         </div>
