--- a/de/whitepaper.html
+++ b/de/whitepaper.html
@@ -1179,38 +1179,38 @@ Eines der besten Schnäppchen fur verzweifelte und dumme ohne Garantie außer de
 		 <p>
 			<strong>Q: Moment, gabs das nicht schonmal?</strong>
 
-			A: Ja, es gab verschieden Varianten des Pyramidensystem, EthPyramid ist der nächste schritt Vorwärts. 10% der Investitionen gehen an alle münzen halter als Dividenden die wieder investiert oder ausgezahlt werden können. 
+			A: Ja, es gab verschieden Varianten des Pyramidensystem, EthPyramid ist der nächste schritt Vorwärts. 10% der Investitionen gehen an alle Münzenhalter als Dividenden die wieder investiert oder ausgezahlt werden können.
 		</p>
 		 <p>
 			<strong>Q: Alles klar, wie kann ich teilnehmen?</strong>
 
-			A: Du brauchst Ethereum und eine browser Erweiterung die sich metamask nennt. Die Erweiterung vereinfacht den kauf und verkauf von deiner erstellten Geldbörse zum smart contract.
+			A: Du brauchst Ethereum und eine browser Erweiterung die sich MetaMask nennt. Die Erweiterung vereinfacht den Kauf und Verkauf von deiner erstellten Geldbörse zum Smart-Contract.
 		</p>
 		 <p>
 			<strong>Q: Kann man die Münze so wie Bitcoin irgendwo abbauen?</strong>
 
-			A: Nein, weder wir noch irgendjemand anderes hat die Möglichkeit zu abbauen. Dazu haben wir haben die gleichen Möglichkeiten Geld rein- oder rauszunehmen wie Du. Keine Hintertüren oder doppelte Böden. Ethpyramid ist selbsterhaltend und kann nicht von aussen verändert, beeinflusst oder geknackt werden.
+			A: Nein, weder wir noch irgendjemand anderes hat die Möglichkeit zum abbauen. Darüber hinaus haben wir die gleichen Möglichkeiten Münzen zu kaufen oder verzukaufen wie Du. Keine Hintertüren oder doppelte Böden. Ethpyramid ist selbsterhaltend und kann nicht von aussen verändert, beeinflusst oder geknackt werden.
 		</p>
 		 <p>
 			<strong>Q: Also was genau passiert mit meinen Münzen?</strong>
 
-			A: Jedes mal wenn jemand eine Münze kauft oder verkauft verändert sich der Preis, 0.25% hoch beim kaufen und -0.25% beim verkaufen.
-			Falls Du deine Münzen in der Geldbörse lässt, und dass solltest du auch, bekommst du Anteile von den 10% der Käufer und Verkäufer entsprechend der Anzahl deiner Münzen. Du kannst deine Münzen jederzeit in Ethereum umwandeln und zum Dividendenpool transferieren. Deine Dividenden sind in Ethereum und werden nicht vom preis der ethpyramid münze beeinflusst.
+			A: Jedes mal wenn jemand eine Münze kauft oder verkauft verändert sich der Preis. +0,25% beim Kauf und -0,25% beim Verkauf .
+			Falls Du deine Münzen in der Geldbörse lässt, und dass solltest du auch, bekommst du Anteile von den 10% der Käufer und Verkäufer entsprechend der Anzahl deiner Münzen. Du kannst deine Münzen jederzeit in Ethereum umwandeln und zur Dividendenbörse transferieren. Deine Dividenden sind in Ethereum und werden nicht vom Preis der EthPyramid-Münze beeinflusst.
 		</p>
 		 <p>
 			<strong>Q: Klingt ja schön und gut, erzähl mir mehr!</strong>
 
-			A: Unser System verringert das Risiko bei den sogenannt “pump and dumps” Geld zu verlieren mit Hilfe der Dividenden. Falls jemand eine hohe Anzahl an münzen verkauft, und somit den Preis runtertreibt, gehen Dividenden an dich und all anderen die mit eisernen Händen an ihre Münzen festhalten. Der geringe Preis wiederum lockt neue Käufer an und somit wird jeder wieder mit Dividenden belohnt der seine Münzen behalten hat. Schwunghandel wird somit auch bestraft da der Rückzahlwert 10% geringer ist als der eigentliche Preis. Falls du auf Nummer sicher gehen willst, kauf die ein paar Münzen und verdiene an der Habgier der Reichen und den schwachen Händen der Armen. Die perfekte neue Mittelklasse.
+			A: Unser System verringert das Risiko bei den sogenannt “pump and dumps” Geld zu verlieren da bei jedem Kauf und Verkauf Dividenden ausgezahlt werden. Falls jemand eine hohe Anzahl an Münzen verkauft, und somit den Preis runtertreibt, gehen Dividenden an dich und alle anderen die mit eisernen Händen an ihre Münzen festhalten. Der geringe Preis wiederum lockt neue Käufer an und somit wird jeder wieder mit Dividenden belohnt der seine Münzen behalten hat. Schwunghandel wird somit auch bestraft da der Rückzahlwert 10% geringer ist als der eigentliche Preis. Falls du auf Nummer sicher gehen willst, kauf dir ein paar Münzen und verdiene an der Habgier der Reichen und den schwachen Händen der Armen. Die perfekte neue Mittelklasse.
 		</p>
 		 <p>
 			<strong>Q: Alles klar, wo kann ich die Kreditkarte durchziehen um mitzuspielen?</strong>
 
-			A: Auf keinen fall solltest du mehr in EthPyramid stecken als du dir leisten kannst zu verlieren.
+			A: Auf keinen fall solltest du mehr in EthPyramid stecken als du die leisten kannst zu verlieren.
 		</p>
 		 <p>
 			<strong>Q: Verstanden, also welche Garantie hab ich das ich mein Geld nicht zum Fenster rausschmeisse?</strong>
 
-			A: Absolut keine. Im ernst, betreten auf eigene Gefahr! Viel gluck! Und denke dran, mach nicht was dich deinen Kopf oder den deiner Familie kosten könnte!
+			A: Absolut keine. Im ernst, Betreten auf eigene Gefahr! Viel Gluck! Und denke dran, mach nicht was dich deinen Kopf oder den deiner Familie kosten könnte!
 		 </p>
 		 
 		 
