Fixed important note in German

--- a/de/whitepaper.html
+++ b/de/whitepaper.html
@@ -1216,7 +1216,14 @@ Eines der besten Schnäppchen fur verzweifelte und dumme ohne Garantie außer de
 		 
 		 <p><strong>WICHTIGER HINWEIS:</strong></p>
 
-		<p>Zu jeder zeit kannst du dich mit dem Schleudersitz aus dem Vertrag Katapultieren falls die Seite nicht funktionieren sollte. Dazu musst bei METAMASK eine Transaktion eröffnen, 0 Ethereum an den Vertrag (0x2Fa0ac498D01632f959D3C18E38f4390B005e200) schicken mit einem GAS Limit von 150000, und bei “transaction data” 0xb1e35242 eingeben und danach die Transaktion bestätigen. Mit der “getMeOutOfHere” Funktion werden alle deine Münzen und Dividenden in Ethereum an deine metamask Geldbörse zurückgeschickt. Speicher dir den Hinweis für den Fall der Fälle irgendwo.</p>
+		<p>
+			Zu jeder zeit kannst du dich mit der Schleudersitz-Funktion aus dem Vertrag katapultieren Falls die Seite nicht
+			funktionieren sollte oder Du einfach nur ganz schnell an dein Geld möchtest.
+			Dazu musst Du bei MetaMask eine Transaktion eröffnen, 0 Ethereum an den Vertrag (0x2Fa0ac498D01632f959D3C18E38f4390B005e200)
+			schicken mit einem GAS Limit von 150000, und bei “transaction data” 0xb1e35242 eingeben und danach die Transaktion bestätigen.
+			Mit der “getMeOutOfHere” Funktion werden alle deine Münzen und Dividenden in Ethereum an deine MetaMask Geldbörse zurückgeschickt.
+			Speicher dir den Hinweis für den Fall der Fälle irgendwo.
+		</p>
 
 		<p><strong>Langweiliges zeug fur die Entwickler unter euch</strong></p>
 
