--- a/de/whitepaper.html
+++ b/de/whitepaper.html
@@ -1227,7 +1227,7 @@ Eines der besten Schnäppchen fur verzweifelte und dumme ohne Garantie außer de
 
 		<p><strong>Langweiliges zeug fur die Entwickler unter euch</strong></p>
 
-		<p>Im gründe ist EthPyramid eine verbesserte Abwandlung von Jochen Hoenickes original Konzept bei dem Fehler und Hintertüren beseitigt wurden. PoWHs unnötige und viel zu komplizierte Funktionalitäten wurden entfernt und der originale Code verbessert. Wir haben mathematische Sicherheitsgleichungen hinzugefügt und somit die Unter/ Überfluss-Hintertür die zum scheitern von PoWH geführt hat, geschlossen. </p>
+		<p>Im Grunde ist EthPyramid eine verbesserte Abwandlung von Jochen Hoenickes original Konzept bei dem Fehler und Hintertüren beseitigt wurden. PoWHs unnötige und viel zu komplizierte Funktionalitäten wurden entfernt und der originale Code verbessert. Wir haben mathematische Sicherheitsgleichungen hinzugefügt und somit die Unter/ Überfluss-Hintertür die zum Scheitern von PoWH geführt hat, geschlossen. </p>
 
 		<p>Wir haben den Smart-Contract auf unserer beta Seite ausführlich getestet und über 4000ETH ein- und ausfließen lassen ohne Probleme und Fehler. Der komplette Vertrag kann unter https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200 angeschaut werden.
 		Unser Smart-Contract ist ausführlich dokumentiert ohne irgendwelchem bullshit Code oder eingebauten Hintertüren.</p>
