--- a/de/coins.html
+++ b/de/coins.html
@@ -62,9 +62,8 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart-Contract</a>
-                            </li>
-                            <li><a href="coins.html">My Coins</a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart-Contract</a></li>
+                            <li><a href="coins.html">MEINE MÜNZEN</a>
 							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
                             </li>
                             </li>
