--- a/de/index.html
+++ b/de/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="navigation">
                         <ul>
-                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
+                            <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart-Contract</a>
                             </li>
                             <li><a href="coins.html">Meine Münzen</a>
                             </li>
