--- a/de/whitepaper.html
+++ b/de/whitepaper.html
@@ -1195,7 +1195,9 @@ Eines der besten Schnäppchen fur verzweifelte und dumme ohne Garantie außer de
 			<strong>Q: Also was genau passiert mit meinen Münzen?</strong>
 
 			A: Jedes mal wenn jemand eine Münze kauft oder verkauft verändert sich der Preis. +0,25% beim Kauf und -0,25% beim Verkauf .
-			Falls Du deine Münzen in der Geldbörse lässt, und dass solltest du auch, bekommst du Anteile von den 10% der Käufer und Verkäufer entsprechend der Anzahl deiner Münzen. Du kannst deine Münzen jederzeit in Ethereum umwandeln und zur Dividendenbörse transferieren. Deine Dividenden sind in Ethereum und werden nicht vom Preis der EthPyramid-Münze beeinflusst.
+			Falls Du deine Münzen in der Geldbörse lässt, und dass solltest du auch, bekommst du Anteile von den 10%
+			 der Münzkäufe- und Verkäufe entsprechend der Anzahl deiner Münzen. Du kannst deine Münzen jederzeit in Ethereum
+			 umwandeln und zur Dividendenbörse transferieren. Deine Dividenden sind in Ethereum und werden nicht vom Preis der EthPyramid-Münze beeinflusst.
 		</p>
 		 <p>
 			<strong>Q: Klingt ja schön und gut, erzähl mir mehr!</strong>
